[package]
name = "clang_metagen"
authors = ["Jamie Birch"]
version = "0.1.0"
edition = "2021"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = { version = "2.0.0", features = ["clang_10_0"]}

# I'm just including this to copy across the clang-rs tests as a basis.
# https://github.com/KyleMayes/clang-rs/blob/master/tests/tests.rs
libc = "0.2.39"

[[test]]
name = "tests"
harness = true
